sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:15: error: unclosed character literal
    print 'fin'
              ^AlgCocktailSort2:24: error: unclosed character literal
    print 'debut'
                ^AlgCocktailSort2:15: error: ';' expected but symbol literal found.
    print 'fin'
          ^AlgCocktailSort2:24: error: ';' expected but symbol literal found.
    print 'debut'
          ^AlgCocktailSort2:28: error: 'while' expected but '}' found.
}
^